# cflan

./: .gitignore  .pre-commit-config.yaml  README.md  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  set_dns.py  setup.py
.github/workflows/: ci.yml
tests/: test_set_dns.py
