[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cflan"
version = "1.0.0"
description = "Integrating LAN infrastructure with Cloudflare services"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Steven Welch", email = "steven@makeitwork.cloud"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]
requires-python = ">=3.9"
dependencies = [
    "cloudflare",
    "netifaces",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
    "vulture",
    "types-PyYAML",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/welchworks/cflan"
Repository = "https://github.com/welchworks/cflan"
Issues = "https://github.com/welchworks/cflan/issues"

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by ruff-format)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.vulture]
paths = ["set_dns.py", "install.py"]
min_confidence = 80

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
show_error_codes = true
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "setup.py",
    ".venv/*",
    "venv/*",
    "install.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70
